# stm32-workshop

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: gpio.rs  led.rs  timer.rs
src/: main.rs
