[package]
authors = ["kontakt@der-fetzer.de"]
name = "stm32-workshop"
edition = "2021"
version = "0.1.0"

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

# Change this import as required for your MCU.
[dependencies.stm32-hal2]
git = "https://github.com/DerFetzer/stm32-hal"
branch = "combined-fixes"
# path = "../stm32-hal"
# features = ["embedded-hal", "f302", "f3rt"]
# features = ["embedded-hal", "f303", "f3rt"]
# features = ["embedded-hal", "f410", "f4rt"]
# features = ["embedded-hal", "f411", "f4rt"]
# features = ["embedded-hal", "f446", "f4rt"]
features = ["embedded-hal", "g0b1", "g0rt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-